--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="toolbar_title_text_size">20sp</dimen>
-
+    <dimen name="toolbar_start_icon_size">40sp</dimen>
     <dimen name="page_margin_horizontal">12dp</dimen>
+    <dimen name="card_view_padding">12dp</dimen>
+    <dimen name="card_view_edit_button_size">25dp</dimen>
 </resources>
