--- a/app/src/main/res/layout/ranking_recycler_item_view.xml
+++ b/app/src/main/res/layout/ranking_recycler_item_view.xml
@@ -1,101 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_margin="8dp"
+    android:elevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/fragment_ranking_header_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="20dp">
+        android:padding="@dimen/card_view_padding">
 
         <TextView
-            android:id="@+id/fragment_ranking_header_ranking"
+            android:id="@+id/ranking_recycler_item_ranking"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/fragment_ranking_header_rank"
+            tools:text="1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/fragment_ranking_header_name"
+            android:id="@+id/ranking_recycler_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/fragment_ranking_header_name"
+            tools:text="John"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/fragment_ranking_header_rank_end_guideline" />
+            app:layout_constraintStart_toStartOf="@id/ranking_recycler_item_rank_end_guideline" />
 
         <TextView
-            android:id="@+id/fragment_ranking_header_total_played"
+            android:id="@+id/ranking_recycler_item_total_played"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/fragment_ranking_header_total_played"
+            tools:text="10"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/fragment_ranking_header_name_end_guideline" />
+            app:layout_constraintStart_toStartOf="@id/ranking_recycler_item_name_end_guideline" />
 
         <TextView
-            android:id="@+id/fragment_ranking_header_wins"
+            android:id="@+id/ranking_recycler_item_wins"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/fragment_ranking_header_wins"
+            tools:text="8"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/fragment_ranking_header_total_played_end_guideline" />
+            app:layout_constraintStart_toStartOf="@id/ranking_recycler_item_total_played_end_guideline" />
 
         <TextView
-            android:id="@+id/fragment_ranking_header_losses"
+            android:id="@+id/ranking_recycler_item_losses"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/fragment_ranking_header_losses"
+            tools:text="2"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/fragment_ranking_header_wins_end_guideline" />
+            app:layout_constraintStart_toStartOf="@id/ranking_recycler_item_wins_end_guideline" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/fragment_ranking_header_rank_end_guideline"
+            android:id="@+id/ranking_recycler_item_rank_end_guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.15"/>
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/fragment_ranking_header_name_end_guideline"
+            android:id="@+id/ranking_recycler_item_name_end_guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.4"/>
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/fragment_ranking_header_total_played_end_guideline"
+            android:id="@+id/ranking_recycler_item_total_played_end_guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.7"/>
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/fragment_ranking_header_wins_end_guideline"
+            android:id="@+id/ranking_recycler_item_wins_end_guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.85"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fragment_ranking_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_ranking_header_layout"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout="@layout/ranking_recycler_item_view"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
