--- a/app/src/main/res/layout/recycler_text_dialog_layout.xml
+++ b/app/src/main/res/layout/recycler_text_dialog_layout.xml
@@ -1,20 +1,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/match_details_dialog_title"
+        android:id="@+id/recycler_dialog_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/activity_match_details_edit_player_hint"
+        tools:text="Select an item"
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_marginBottom="8dp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/match_details_dialog_recycler_view"
+        android:id="@+id/recycler_dialog_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:scrollbars="vertical" />
