Added message display on empty lists

--- a/app/src/main/res/layout/fragment_players.xml
+++ b/app/src/main/res/layout/fragment_players.xml
@@ -15,4 +15,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout="@layout/fragment_players_card_view"/>
 
+    <TextView
+        android:id="@+id/fragment_players_list_empty_message"
+        android:layout_margin="@dimen/page_margin_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:visibility="gone"
+        android:text="@string/players_list_empty_message"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
