--- a/app/src/main/res/layout/recycler_text_dialog_layout.xml
+++ b/app/src/main/res/layout/recycler_text_dialog_layout.xml
@@ -17,7 +17,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_dialog_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:scrollbars="vertical" />
 
 </LinearLayout>
