--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.FoosballMatches" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-         <item name="colorPrimary">@color/theme</item>
+        <item name="colorPrimary">@color/theme</item>
+        <item name="colorOnPrimary">@color/white</item>
     </style>
 
     <style name="Theme.FoosballMatches" parent="Base.Theme.FoosballMatches" />
