--- a/app/src/main/res/layout/activity_player_details.xml
+++ b/app/src/main/res/layout/activity_player_details.xml
@@ -20,6 +20,7 @@
         android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/player_details_error_text"
         app:layout_constraintTop_toBottomOf="@id/activity_match_details_toolbar">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -136,6 +137,7 @@
         tools:text="Error"
         android:textColor="@color/error"
         android:layout_marginHorizontal="@dimen/page_margin_horizontal"
+        android:layout_marginVertical="@dimen/page_margin_horizontal_xl"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/player_details_button_submit" />
@@ -147,6 +149,7 @@
         android:text="@string/button_submit"
         android:paddingVertical="@dimen/page_margin_horizontal"
         android:layout_marginHorizontal="@dimen/page_margin_horizontal"
+        android:layout_marginVertical="@dimen/page_margin_horizontal_xl"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 
