--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="toolbar_title_text_size">20sp</dimen>
     <dimen name="toolbar_start_icon_size">40sp</dimen>
     <dimen name="page_margin_horizontal">12dp</dimen>
+    <dimen name="page_margin_horizontal_xl">18dp</dimen>
     <dimen name="card_view_padding">12dp</dimen>
     <dimen name="card_view_edit_button_size">25dp</dimen>
     <dimen name="edit_text_title_size">16sp</dimen>
