--- a/app/src/main/res/layout/fragment_ranking_recycler_item_view.xml
+++ b/app/src/main/res/layout/fragment_ranking_recycler_item_view.xml
@@ -28,6 +28,15 @@
             android:layout_height="wrap_content"
             tools:text="John"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/ranking_recycler_item_id"
+            app:layout_constraintStart_toStartOf="@id/ranking_recycler_item_rank_end_guideline" />
+
+        <TextView
+            android:id="@+id/ranking_recycler_item_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="458965"
+            app:layout_constraintTop_toBottomOf="@id/ranking_recycler_item_name"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/ranking_recycler_item_rank_end_guideline" />
 
